chore: change package name etc

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@rweich/userscript-template",
+  "name": "@mangadoot/anime-planet-notes",
   "version": "0.0.0-development",
   "description": "Template for userscript development.",
   "private": "true",
-  "author": "rweich",
+  "author": "mangadoot",
   "license": "MIT",
   "scripts": {
     "build": "webpack --mode=development",
@@ -65,10 +65,7 @@
   "engines": {
     "node": ">=14.17"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rweich/userscript-template.git"
-  },
+  "repository": "mangadoot/anime-planet-notes",
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
