--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "watch": "webpack watch --mode=development"
   },
   "dependencies": {
+    "@vueuse/core": "^9.3.0",
     "axios": "^0.25.0",
     "axios-userscript-adapter": "^0.1.8",
     "css-loader": "^6.5.1",
@@ -26,21 +27,23 @@
     "localstory": "^0.9.1",
     "loglevel": "^1.8.0",
     "loglevel-plugin-prefix": "^0.8.4",
+    "p-wait-for": "^5.0.0",
+    "pinia": "^2.0.23",
     "primeflex": "^2.0.0",
+    "primeicons": "^5.0.0",
     "primevue": "^2.0.0",
     "rimraf": "^3.0.2",
     "sass": "^1.49.0",
     "sass-loader": "^12.4.0",
     "ts-loader": "^9.2.2",
     "ts-log": "^2.2.4",
+    "ts-type-guards": "^0.7.0",
     "typescript": "^4.5.5",
-    "url-loader": "^4.1.1",
-    "vue": "^2.6.12",
+    "vue": "^2.7.0",
     "vue-class-component": "^7.2.6",
-    "vue-loader": "^15.9.7",
+    "vue-loader": "^15.10.0",
     "vue-property-decorator": "^9.1.2",
     "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "^2.6.12",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.1",
     "webpack-userscript": "^2.5.8"
@@ -84,6 +87,7 @@
       ]
     },
     "rules": {
+      "sort-keys": 0,
       "vue/singleline-html-element-content-newline": 0,
       "vue/max-attributes-per-line": [
         "error",
