--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "axios": "^0.25.0",
     "axios-userscript-adapter": "^0.1.8",
     "css-loader": "^6.5.1",
+    "dayjs": "^1.11.7",
     "deepmerge": "^4.2.2",
     "eventemitter3": "^4.0.7",
+    "file-saver": "^2.0.5",
     "localstory": "^0.9.1",
     "loglevel": "^1.8.0",
     "loglevel-plugin-prefix": "^0.8.4",
@@ -56,6 +58,7 @@
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@types/file-saver": "^2.0.5",
     "@types/greasemonkey": "^4.0.1",
     "@types/node": "^17.0.10",
     "eslint-plugin-vue": "^8.3.0",
